--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,10 +1,31 @@
 ja:
   activerecord:
+    models:
+      end_user: ユーザー
+      farmer: 生産者
+      chat: チャット
+      topic_comment: コメント
+      topic: トピック
     attributes:
       topic:
         title: 題名
         body: 本文
         topic_image: 画像
-        
-      end_user: ユーザー
-      farmer: 生産者
+      farmer:
+        email: メール
+        category: カテゴリー 
+        farm_name: 農園名
+        name: 名前
+        farm_image: 農園画像
+        region: 地域
+        postcode: 郵便番号
+        telephone_number: 電話番号
+        introduction: 紹介
+        prefecture: 都道府県
+        address: 住所
+        profile_image: プロフィール画像
+        password: パスワード
+      end_user:
+        email: メール
+        password: パスワード
+        name: 名前
