--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -29,3 +29,10 @@ ja:
         email: メール
         password: パスワード
         name: 名前
+  views:
+    pagination:
+      first: "« 最初"
+      last: "最後 »"
+      previous: "‹ 前"
+      next: "次 ›"
+      truncate: "..."
